--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>LP Etusivu</title>
 </head>
 <body>
-    
+    <header>
+        <img src="" alt="">
+        <h1>lauttapario</h1>
+        <span class="dropdown">valikko</span>
+        <a href="partioon.html">liity</a>
+    </header>
+    <main>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
