--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
     <title>LP Etusivu</title>
 </head>
 <body>
@@ -14,9 +15,15 @@
         <a href="partioon.html">liity</a>
     </header>
     <main>
+        <h2></h2>
+        <p></p>
+        <img src="" alt="">
+        <h3></h3>
+        <p></p>
+        <h3></h3>
+        <p></p>
     </main>
     <footer>
-
     </footer>
 </body>
 </html>
