--- a/index.html
+++ b/index.html
@@ -11,7 +11,17 @@
     <header>
         <img src="" alt="">
         <h1>lauttapario</h1>
-        <span class="dropdown">valikko</span>
+        <nav>
+            <ul>
+                <li><a href="index.html">etusivu</a></li>
+                <li><a href="liity.html">partioon</a></li>
+                <li><a href="toiminta.html">toiminta</a></li>
+                <li><a href="lpk.html">lippukunta</a></li>
+                <li><a href="kamppa.html">kämppä</a></li>
+                <li><a href="historia.html">historia</a></li>
+                <li><a href="yhteystiedot.html">yhteystiedot</a></li>
+            </ul>
+        </nav>
         <a href="partioon.html">liity</a>
     </header>
     <main>
