--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
         <nav class="dropdown">
             <button class="button">valikko</button>
             <ul class="dropdown-content">
-                    <li><a href="index.html">etusivu</a></li>
-                    <li><a href="liity.html">partioon</a></li>
-                    <li><a href="toiminta.html">toiminta</a></li>
-                    <li><a href="lpk.html">lippukunta</a></li>
-                    <li><a href="kamppa.html">kämppä</a></li>
-                    <li><a href="historia.html">historia</a></li>
-                    <li><a href="yhteystiedot.html">yhteystiedot</a></li>
+                <li class="active-link"><a href="index.html">etusivu</a></li>
+                <li><a href="liity.html">partioon</a></li>
+                <li><a href="toiminta.html">toiminta</a></li>
+                <li><a href="lpk.html">lippukunta</a></li>
+                <li><a href="kamppa.html">kämppä</a></li>
+                <li><a href="historia.html">historia</a></li>
+                <li><a href="yhteystiedot.html">yhteystiedot</a></li>
             </ul>
         </nav>
         <a class="join-btn" href="liity.html">liity!</a>
@@ -30,7 +30,7 @@
             </div>
             <img src="" alt="">
             <h3>Kevät kauden toimintaa</h3>
-            <div class="calender">        
+            <div class="calendar">        
                 <article>
                     <h4>TAMMIKUU</h4>
                     <ul>
