--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <h1 class="logo">lauttapario</h1>
+        <h1 class="logo">lauttapartio</h1>
         <nav class="dropdown">
             <button class="button">valikko</button>
             <ul class="dropdown-content">
@@ -28,8 +28,8 @@
                 <h2>Otsikko</h2>
                 <p class="basic-text">Exercitation amet ipsum culpa amet cupidatat fugiat commodo. Ad tempor et reprehenderit laboris ex incididunt ad adipisicing. Qui laborum amet in eu officia fugiat aliqua sit ad et in ad.</p>
             </div>
-            <img src="" alt="">
-            <h3>Kevät kauden toimintaa</h3>
+            <img class="main-img" src="img\vincent-riszdorfer-1453674-unsplash.jpg" alt="">
+            <h3>Kevätkauden toimintaa</h3>
             <div class="calendar">        
                 <article>
                     <h4>TAMMIKUU</h4>
