--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
                 <li><a href="yhteystiedot.html">yhteystiedot</a></li>
             </ul>
         </nav>
-        <a class="join-btn" href="liity.html">liity!</a>
+        <button class="join-btn" class="button">
+            <a href="liity.html">liity</a>
+        </button>
         <main class="main-text">
             <div>
                 <h2>Otsikko</h2>
