--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <link rel="stylesheet" href="mobile.css">
     <title>LP Etusivu</title>
 </head>
@@ -28,7 +30,7 @@
         <main class="main-text">
             <div>
                 <h2>Otsikko</h2>
-                <p class="basic-text">Exercitation amet ipsum culpa amet cupidatat fugiat commodo. Ad tempor et reprehenderit laboris ex incididunt ad adipisicing. Qui laborum amet in eu officia fugiat aliqua sit ad et in ad.</p>
+                <p class="basic-text">Olemme Helsingin Lauttasaaressa toimiva erähenkinen poikapartiolippukunta. Lippukuntaan kuuluu yli sata jäsentä, pääosa 7-25-vuotiaita. Tule mukaan toimintaan! Aloita maailman paras harrastus jossa opituista taidoista on varmasti hyötyä tulevaisuudessakin!</p>
             </div>
             <img class="main-img" src="img\vincent-riszdorfer-1453674-unsplash.jpg" alt="">
             <h3>Kevätkauden toimintaa</h3>
@@ -43,47 +45,65 @@
                     </ul>
                 </article>
                 <article>
-                    <h4>TAMMIKUU</h4>
+                    <h4>HELMIKUU</h4>
                     <ul>
-                        <li>Ryhmien retket</li>
-                        <li>VJ-kurssi, osa-I. (tarpojat)</li>
-                        <li>VJN-kokous 14.1. (johtajat)</li>
+                        <li>Talviretki 8.-10.2. (seikkailijat, tarpojat)</li>
+                        <li>Vko 8 HIIHTOLOMA (ei kokouksia)</li>
+                        <li>Lätkäturnaus (koko lippukunta)</li>
+                        <li>Kevätkokous (johtajat)</li>
+                    </ul>
+                </article>
+                <article>
+                    <h4>MAALISKUU</h4>
+                    <ul>
+                        <li>Kettuvartion kämppäretki 1.-3.3.</li>
+                        <li>Sählyturnaus (koko lippukunta)</li>
+                        <li>VJN-eräretki 30.-31.3. (johtajat)</li>
                         <li></li>
                     </ul>
                 </article>
                 <article>
-                    <h4>TAMMIKUU</h4>
+                    <h4>HUHTIKUU</h4>
                     <ul>
-                        <li>Ryhmien retket</li>
-                        <li>VJ-kurssi, osa-I. (tarpojat)</li>
-                        <li>VJN-kokous 14.1. (johtajat)</li>
+                        <li>Pohjola V 5.-7.4. (koko lippukunta)</li>
+                        <li>EPO:n pääsiäisvaellus 17.-22.4. (johtajat)</li>
+                        <li>Suunnistuskisat & Komppassi-cup (johtajat)</li>
+                        <li>Piirin kevät-pt:t Ranta-Törmä 27.4. (seikkailijat, tarpojat)</li>
+                    </ul>
+                </article>
+                <article>
+                    <h4>TOULOKUU</h4>
+                    <ul>
+                        <li>Kämppätalkoot 4.5. (johtajat)</li>
+                        <li>Savotta XVII 17.-19.5. (seikkailijat, tarpojat)</li>
+                        <li>Kevätjuhla (koko lippukunta)</li>
                         <li></li>
                     </ul>
                 </article>
                 <article>
-                    <h4>TAMMIKUU</h4>
+                    <h4>KESÄKUU</h4>
                     <ul>
-                        <li>Ryhmien retket</li>
-                        <li>VJ-kurssi, osa-I. (tarpojat)</li>
-                        <li>VJN-kokous 14.1. (johtajat)</li>
+                        <li>Melontapäivä (johtajat)</li>
+                        <li>Jukolan viesti Kangasala 15.-16.6. (johtajat)</li>
+                        <li>EPO:n melontavaellus 28.-30.6. (johtajat)</li>
                         <li></li>
                     </ul>
                 </article>
                 <article>
-                    <h4>TAMMIKUU</h4>
+                    <h4>HEINÄKUU</h4>
                     <ul>
-                        <li>Ryhmien retket</li>
-                        <li>VJ-kurssi, osa-I. (tarpojat)</li>
-                        <li>VJN-kokous 14.1. (johtajat)</li>
+                        <li>EPO:n Kesävaellus Lappiin 15.-21.7. (johtajat)</li>
+                        <li>LP:n kesäleiri 29.7.-4.8. (koko lippukunta)</li>
+                        <li></li>
                         <li></li>
                     </ul>
                 </article>
                 <article>
-                    <h4>TAMMIKUU</h4>
+                    <h4>ELOKUU</h4>
                     <ul>
-                        <li>Ryhmien retket</li>
-                        <li>VJ-kurssi, osa-I. (tarpojat)</li>
-                        <li>VJN-kokous 14.1. (johtajat)</li>
+                        <li>Suuri savu (johtajat)</li>
+                        <li>VJ-kurssin kaupunki-ilta (tarpojat)</li>
+                        <li>TAISTO 23.-25.8. (johtajat)</li>
                         <li></li>
                     </ul>
                 </article>
@@ -121,6 +141,12 @@
             </div>
         </main>
         <footer class="footer">
+            <div class="social">
+                <a href=https://www.facebook.com/><i class="fab fa-facebook fa-2x"></i></a>
+                <a href=https://twitter.com/?lang=en><i class="fab fa-twitter fa-2x"></i></a>
+                <a href=https://www.instagram.com/><i class="fab fa-instagram fa-2x"></i></a>
+                <a href=https://fi.linkedin.com/><i class="fab fa-linkedin fa-2x"></i></a>
+            </div>
             <p> &copy; asdf</p>
         </footer>
     </div>
