--- a/kamppa.html
+++ b/kamppa.html
@@ -28,110 +28,54 @@
             <a href="liity.html">liity</a>
         </button>
         <main class="main-text">
-            <div>
-                <h2>Otsikko</h2>
-                <p class="basic-text">Olemme Helsingin Lauttasaaressa toimiva erähenkinen poikapartiolippukunta. Lippukuntaan kuuluu yli sata jäsentä, pääosa 7-25-vuotiaita. Tule mukaan toimintaan! Aloita maailman paras harrastus jossa opituista taidoista on varmasti hyötyä tulevaisuudessakin!</p>
-            </div>
-            <img class="main-img" src="img\vincent-riszdorfer-1453674-unsplash.jpg" alt="">
-            <h3>Kevätkauden toimintaa</h3>
+            <h2>Kotkanpesä <br> Lauttapartion kämppä</h2>
+            <img class="main-img" src="img/kotkanpesaetu.jpg" alt="">
+            <h4>KOTKANPESÄN ESITTELY</h4>
+            <p class="basic-text">Kotkanpesä on saunalla varustettu erähenkinen hirsikämppä, idyllisen suolammen rannalla Karkkilassa. Kämppä sijaitsee Lauttapartion omistamalla kahden hehtaarin suuruisella tontilla. Sisätilat jakautuvat isoon huoneeseen jossa ovat laverit ja takka, sekä keittiöön ja saunaan. Kämpän etupuolella on myös tilava terassi, ilta-auringon suuntaan. Läheisyydessä sijaitsevat puuvaja, vessa ja nuotiopaikka. Nuotiopaikan vierestä löytyy myös telttapaikkoja. Kotkanpesän kompostoiva vessa valmistui kesällä 2003. Samassa yhteydessä hankittiin myös ympärivuoden toimiva lämpökompostori ruuantähteille ja kaminan tuhkille. Vuonna 1998 kämpälle johtanut noin kilometrin mittainen polku korvattiin mäkeen rakennetulla soratiellä.</p>
             <div class="calendar">        
                 <article>
-                    <h4>TAMMIKUU</h4>
+                    <h4>KÄMPPÄFAKTAA</h4>
                     <ul>
-                        <li>Ryhmien retket</li>
-                        <li>VJ-kurssi, osa-I. (tarpojat)</li>
-                        <li>VJN-kokous 14.1. (johtajat)</li>
-                    </ul>
-                </article>
-                <article>
-                    <h4>HELMIKUU</h4>
-                    <ul>
-                        <li>Talviretki 8.-10.2. (seikkailijat, tarpojat)</li>
-                        <li>Vko 8 HIIHTOLOMA (ei kokouksia)</li>
-                        <li>Lätkäturnaus (koko lippukunta)</li>
-                        <li>Kevätkokous (johtajat)</li>
-                    </ul>
-                </article>
-                <article>
-                    <h4>MAALISKUU</h4>
-                    <ul>
-                        <li>Kettuvartion kämppäretki 1.-3.3.</li>
-                        <li>Sählyturnaus (koko lippukunta)</li>
-                        <li>VJN-eräretki 30.-31.3. (johtajat)</li>
-                    </ul>
-                </article>
-                <article>
-                    <h4>HUHTIKUU</h4>
-                    <ul>
-                        <li>Pohjola V 5.-7.4. (koko lippukunta)</li>
-                        <li>EPO:n pääsiäisvaellus 17.-22.4. (johtajat)</li>
-                        <li>Suunnistuskisat & Komppassi-cup (johtajat)</li>
-                        <li>Piirin kevät-pt:t Ranta-Törmä 27.4. (seikkailijat, tarpojat)</li>
-                    </ul>
-                </article>
-                <article>
-                    <h4>TOULOKUU</h4>
-                    <ul>
-                        <li>Kämppätalkoot 4.5. (johtajat)</li>
-                        <li>Savotta XVII 17.-19.5. (seikkailijat, tarpojat)</li>
-                        <li>Kevätjuhla (koko lippukunta)</li>
-                    </ul>
-                </article>
-                <article>
-                    <h4>KESÄKUU</h4>
-                    <ul>
-                        <li>Melontapäivä (johtajat)</li>
-                        <li>Jukolan viesti Kangasala 15.-16.6. (johtajat)</li>
-                        <li>EPO:n melontavaellus 28.-30.6. (johtajat)</li>
-                    </ul>
-                </article>
-                <article>
-                    <h4>HEINÄKUU</h4>
-                    <ul>
-                        <li>EPO:n Kesävaellus Lappiin 15.-21.7. (johtajat)</li>
-                        <li>LP:n kesäleiri 29.7.-4.8. (koko lippukunta)</li>
-                    </ul>
-                </article>
-                <article>
-                    <h4>ELOKUU</h4>
-                    <ul>
-                        <li>Suuri savu (johtajat)</li>
-                        <li>VJ-kurssin kaupunki-ilta (tarpojat)</li>
-                        <li>TAISTO 23.-25.8. (johtajat)</li>
+                        <li>
+                            <h5>Valmistunut:</h5><span>vuonna 1968</span>
+                        </li>
+                        <li>
+                            <h5>Sijainti:</h5><span>Karkkilan lähistöllä</span>
+                        </li>
+                        <li>
+                            <h5>Etäisyydet</h5><span>vajaan tunnin ajomatka Lauttasaaresta</span>
+                        </li>
+                        <li>
+                            <h5>Yhteydet:</h5><span>linja-autolla Karkkilan keskustaan tai omalla autolla noin sadan metrin päähän (talvella noin 1 km) </span>
+                        </li>
+                        <li>
+                            <h5>Majoitustilaa:</h5><span>lavereilla ja penkeillä noin kymmenelle aikuiselle </span>
+                        </li>
+                        <li>
+                            <h5>Lämmitys</h5><span>puukamina ja takka </span>
+                        </li>
+                        <li>
+                            <h5>Valaisimet:</h5><span>2 kpl. Aladdin lamppuja, myrskylyhtyjä </span>
+                        </li>
+                        <li>
+                            <h5>Keittiö:</h5><span>kaasuliesi, astioita noin viidelletoista hengelle </span>
+                        </li>
+                        <li>
+                            <h5>Sauna:</h5><span>puukiuas ja lämminvesipata, remontoitu vuonna 1998, toimii myös majoitustilana </span>
+                        </li>
+                        <li>
+                            <h5>Juomavesi:</h5><span>kaivosta / lähteestä</span>
+                        </li>
                     </ul>
                 </article>
             </div>
-            <div class="times">
-                <h3>Kokousajat</h3>
-                <article>
-                    <h4>1.-luokkalaiset, ikäkausi 2011</h4>
-                    <p>maanantaisin 17:45 - 18:45</p>
-                </article>
-                <article>
-                    <h4>1.-luokkalaiset, ikäkausi 2011</h4>
-                    <p>maanantaisin 17:45 - 18:45</p>
-                </article>
-                <article>
-                    <h4>1.-luokkalaiset, ikäkausi 2011</h4>
-                    <p>maanantaisin 17:45 - 18:45</p>
-                </article>
-                <article>
-                    <h4>1.-luokkalaiset, ikäkausi 2011</h4>
-                    <p>maanantaisin 17:45 - 18:45</p>
-                </article>
-                <article>
-                    <h4>1.-luokkalaiset, ikäkausi 2011</h4>
-                    <p>maanantaisin 17:45 - 18:45</p>
-                </article>
-                <article>
-                    <h4>1.-luokkalaiset, ikäkausi 2011</h4>
-                    <p>maanantaisin 17:45 - 18:45</p>
-                </article>
-                <article>
-                    <h4>1.-luokkalaiset, ikäkausi 2011</h4>
-                    <p>maanantaisin 17:45 - 18:45</p>
-                </article>
-            </div>
+            <h4>KUNNOSSAPITO</h4>
+            <p class="basic-text">Kotkanpesästä huolehtii Kämppätoimikunta kämpänisännän johdolla. Toimikunta järjestää kämpällä puutalkoot noin kerran vuodessa. Kämpänkäyttötoimikunta on viime vuosina uusinut muun muassa saunan, ison huoneen lattian, katon päällysteen, kämpän ja vajan puunsuojauksen, sekä kuistin laudoituksen. Tuoreimpia toimikunnan aikaansaannoksia ovat kompostoivan vessan rakentaminen, sekä laiturin jatko-osan ja lämpökompostorin hankkiminen.</p>
+            <img  class="main-img" src="img/kotkanpesasivu.jpg" alt="">
+            <h4>VARAUKSET</h4>
+            <p class="basic-text">Kolon ilmoitustaulun kämppävarauslistaan. Vapaita viikonloppuja voi myös kysellä kämpänisännältä, mutta varauksissa etusijalla ovat aina vartiot ja laumat. Lauttapartion Johtajaneuvoston päätöksellä kämppää ei vuokrata partion ulkopuolisille tahoille! Partiolippukunnille vuokraus onnistuu varaustilanteen mukaan. Partiolippukunnilta viikonlopun hinta on 70 euroa. <br> <br> Kämpän avaimia ja varaustilannetta voi tiedustella kämpänisäntä Matti Tannerilta (puh. 0400 8811410)</p>
+            <h4>HUOM!</h4>
+            <p class="basic-text">Kämpältä poistuttaessa täytetään aina kämpänkäyttöraportti, jonka saa kämpänisännältä avaimien mukana. Vartion tai lauman retkellä on oltava mukana myös yli 16-vuotias kämppävastaava, jolla on kämppävastaavan koulutus.</p>
         </main>
         <footer class="footer">
             <div class="social">
