--- a/lpk.html
+++ b/lpk.html
@@ -29,108 +29,104 @@
         </button>
         <main class="main-text">
             <div>
-                <h2>Otsikko</h2>
-                <p class="basic-text">Olemme Helsingin Lauttasaaressa toimiva erähenkinen poikapartiolippukunta. Lippukuntaan kuuluu yli sata jäsentä, pääosa 7-25-vuotiaita. Tule mukaan toimintaan! Aloita maailman paras harrastus jossa opituista taidoista on varmasti hyötyä tulevaisuudessakin!</p>
+                <h2>Lauttapartio Ry.</h2>
+                <p class="basic-text">Lauttapartiossa on yhteensä yli sata jäsentä. Lippukunta on jaettu neljään osastoon ikäkausittain: Kolkkapoikaosastoon (KPO), Seikkailijaosastoon, Tarpojaosastoon (TPO) ja Eräpoikaosastoon (EPO). Lisätietoa osastoista löydät johtajaneuvoston ja toimihenkilöiden jälkeen. <br> <br> Alla olevasta Marmeladiportaasta löydät johtajaneuvoston (JN) jäsenet ja toimihenkilöt sekä osastojen johtajat.</p>
             </div>
-            <img class="main-img" src="img\vincent-riszdorfer-1453674-unsplash.jpg" alt="">
-            <h3>Kevätkauden toimintaa</h3>
-            <div class="calendar">        
+            <div class="times">
+                <h3>Johtajaneuvosto</h3>
                 <article>
-                    <h4>TAMMIKUU</h4>
-                    <ul>
-                        <li>Ryhmien retket</li>
-                        <li>VJ-kurssi, osa-I. (tarpojat)</li>
-                        <li>VJN-kokous 14.1. (johtajat)</li>
-                    </ul>
+                    <h4>Lippukunnanjohtaja (lpkj):</h4>
+                    <p>Atte Österholm</p>
                 </article>
                 <article>
-                    <h4>HELMIKUU</h4>
-                    <ul>
-                        <li>Talviretki 8.-10.2. (seikkailijat, tarpojat)</li>
-                        <li>Vko 8 HIIHTOLOMA (ei kokouksia)</li>
-                        <li>Lätkäturnaus (koko lippukunta)</li>
-                        <li>Kevätkokous (johtajat)</li>
-                    </ul>
+                    <h4>Sihteeri:</h4>
+                    <p>Kasper Keränen</p>
                 </article>
                 <article>
-                    <h4>MAALISKUU</h4>
-                    <ul>
-                        <li>Kettuvartion kämppäretki 1.-3.3.</li>
-                        <li>Sählyturnaus (koko lippukunta)</li>
-                        <li>VJN-eräretki 30.-31.3. (johtajat)</li>
-                    </ul>
+                    <h4>Rahastonhoitaja:</h4>
+                    <p>Jani Sainio</p>
                 </article>
                 <article>
-                    <h4>HUHTIKUU</h4>
-                    <ul>
-                        <li>Pohjola V 5.-7.4. (koko lippukunta)</li>
-                        <li>EPO:n pääsiäisvaellus 17.-22.4. (johtajat)</li>
-                        <li>Suunnistuskisat & Komppassi-cup (johtajat)</li>
-                        <li>Piirin kevät-pt:t Ranta-Törmä 27.4. (seikkailijat, tarpojat)</li>
-                    </ul>
+                    <h4>Kolkkapoikaosaston johtaja:</h4>
+                    <p>Lauri Laatu</p>
                 </article>
                 <article>
-                    <h4>TOULOKUU</h4>
-                    <ul>
-                        <li>Kämppätalkoot 4.5. (johtajat)</li>
-                        <li>Savotta XVII 17.-19.5. (seikkailijat, tarpojat)</li>
-                        <li>Kevätjuhla (koko lippukunta)</li>
-                    </ul>
+                    <h4>Partiopoikaosaston johtaja</h4>
+                    <p>Joel Kivimies</p>
                 </article>
                 <article>
-                    <h4>KESÄKUU</h4>
-                    <ul>
-                        <li>Melontapäivä (johtajat)</li>
-                        <li>Jukolan viesti Kangasala 15.-16.6. (johtajat)</li>
-                        <li>EPO:n melontavaellus 28.-30.6. (johtajat)</li>
-                    </ul>
+                    <h4>Seikkailijaosaston johtaja:</h4>
+                    <p>Vilkko Eskelinen</p>
                 </article>
                 <article>
-                    <h4>HEINÄKUU</h4>
-                    <ul>
-                        <li>EPO:n Kesävaellus Lappiin 15.-21.7. (johtajat)</li>
-                        <li>LP:n kesäleiri 29.7.-4.8. (koko lippukunta)</li>
-                    </ul>
+                    <h4>Tarpojaosaston johtaja:</h4>
+                    <p>Ville Berg</p>
                 </article>
                 <article>
-                    <h4>ELOKUU</h4>
-                    <ul>
-                        <li>Suuri savu (johtajat)</li>
-                        <li>VJ-kurssin kaupunki-ilta (tarpojat)</li>
-                        <li>TAISTO 23.-25.8. (johtajat)</li>
-                    </ul>
+                    <h4>Eräpoikaosaston johtaja:</h4>
+                    <p>Patrik Pomell</p>
                 </article>
             </div>
             <div class="times">
-                <h3>Kokousajat</h3>
+                <h3>Toimihenkilöt</h3>
                 <article>
-                    <h4>1.-luokkalaiset, ikäkausi 2011</h4>
-                    <p>maanantaisin 17:45 - 18:45</p>
+                    <h4>Kämpänisäntä:</h4>
+                    <p>Matti Tanner</p>
                 </article>
                 <article>
-                    <h4>1.-luokkalaiset, ikäkausi 2011</h4>
-                    <p>maanantaisin 17:45 - 18:45</p>
+                    <h4>Jälkiä Päätoimittaja:</h4>
+                    <p>Atte Österholm</p>
                 </article>
                 <article>
-                    <h4>1.-luokkalaiset, ikäkausi 2011</h4>
-                    <p>maanantaisin 17:45 - 18:45</p>
+                    <h4>Toimitussihteeri:</h4>
+                    <p>Joel Kivimies</p>
                 </article>
                 <article>
-                    <h4>1.-luokkalaiset, ikäkausi 2011</h4>
-                    <p>maanantaisin 17:45 - 18:45</p>
+                    <h4>Kalustovastaava:</h4>
+                    <p>Patrik Pomell</p>
                 </article>
                 <article>
-                    <h4>1.-luokkalaiset, ikäkausi 2011</h4>
-                    <p>maanantaisin 17:45 - 18:45</p>
+                    <h4>Verkkosivuvastaava:</h4>
+                    <p>Mikko Walden</p>
                 </article>
                 <article>
-                    <h4>1.-luokkalaiset, ikäkausi 2011</h4>
-                    <p>maanantaisin 17:45 - 18:45</p>
+                    <h4>Urheiluvastaava:</h4>
+                    <p>Julius Rissanen</p>
                 </article>
                 <article>
-                    <h4>1.-luokkalaiset, ikäkausi 2011</h4>
-                    <p>maanantaisin 17:45 - 18:45</p>
+                    <h4>Rekisterinhoitaja:</h4>
+                    <p>Atte Österholm</p>
                 </article>
+                <article>
+                    <h4>Tuotepäällikkö:</h4>
+                    <p>Matti Tanner</p>
+                </article>
+                <article>
+                    <h4>Sampo:</h4>
+                    <p>Matti Tanner</p>
+                </article>
+                <article>
+                    <h4>Ansiomerkkitoimikunta:</h4>
+                    <p>Patrik Uimonen (PJ), Atte Österholm, Jani Sainio</p>
+                </article>
+                <article>
+                    <h4>Kämpänkäyttötoimikunta:</h4>
+                    <p>Matti Tanner (PJ), Niko Salonen, Lauri Laatu</p>
+                </article>
+                <article>
+                    <h4>Jälkiä-toimikunta:</h4>
+                    <p>Atte Österholm (PJ), Matti Tanner, Patrik Pomell, Joel Kivimies, Patrik Uimonen</p>
+                </article>
+            </div>
+            <div>
+                <h4>Kolkkapoikaosasto</h4>
+                <p class="basic-text">Kolkkapoikaosasto, eli KPO, vastaa lippukunnan laumatoiminnasta ja siihen kuuluvat kaikki kolkkapojat ja laumanjohtajat. KPO järjestää laumojen oman toiminnan lisäksi yhteistä ohjelmaa, kuten vuosittaisen KPO-retken sekä kolkkien oman partiotaitokilpailun. Osastoa johtaa KPOJ yhdessä laumanjohtajien kanssa.</p>
+                <h4>Seikkailijaosasto</h4>
+                <p class="basic-text">Seikkailijaosasto vastaa Tarpojaosaston kanssa lippukunnan vartiotoiminnasta ja siihen kuuluvat seikkailijat sekä seikkailijoiden johtajat. Kaikki Lauttapartion seikkailijat muodostavat yhteisen suurjoukkueen. Seikkailijajoukkue pitää joukkueen yhteisiä retkiä, osallistuu talvileirille sekä partiotaitokisoihin.</p>
+                <h4>Tarpojaosasto</h4>
+                <p class="basic-text">Tarpojaosasto vastaa Seikkailijaosaston kanssa lippukunnan vartiotoiminnasta ja siihen kuuluvat tarpojat sekä tarpojien johtajat. Tarpojaosasto järjestää vuosittain oman vaelluksen.</p>
+                <h4>Eräpoikaosasto</h4>
+                <p class="basic-text">Eräpoikaosasto, eli EPO, vastaa pääsääntöisesti kaikkien lippukunnan yhteisten tilaisuuksien järjestämisestä. Eräpoikaosastoon kuuluvat kaikki Lauttapartion johtajat. EPO:n täysivaltaisia jäseniä ovat kuitenkin vain I-luokan suorittaneet johtajat. Täysivaltaiset eräpojat saavat kantaa partiopaidassaan eräpoikaosaston legendaarista merkkiä. <br> <br> Lippukunnan tilaisuuksien lisäksi EPO järjestää myös omaa toimintaa. Perinteisiä tapahtumia ovat Pääsiäis- ja melontavaellukset, sekä Suuri Savu. Viime vuosina eräpoikaosasto on myös järjestänyt jäsenilleen muun muassa omaa kovatasoista vaelluskisaa Taistoa ja splättäysturnauksia. EPO:n varainkeruutempauksista mittavin on 1950-luvulta peräisin oleva Lauttapartion Joulupukkipalvelu.</p>
             </div>
         </main>
         <footer class="footer">
