--- a/yhteystiedot.html
+++ b/yhteystiedot.html
@@ -29,108 +29,41 @@
         </button>
         <main class="main-text">
             <div>
-                <h2>Otsikko</h2>
-                <p class="basic-text">Olemme Helsingin Lauttasaaressa toimiva erähenkinen poikapartiolippukunta. Lippukuntaan kuuluu yli sata jäsentä, pääosa 7-25-vuotiaita. Tule mukaan toimintaan! Aloita maailman paras harrastus jossa opituista taidoista on varmasti hyötyä tulevaisuudessakin!</p>
+                <h2>Yhteystiedot</h2>
+                <p class="basic-text">Lippukuntaamme koskevissa asioissa voit ottaa yhteyttä sähköpostitse tai soittamalla suoraan lippukunnanjohtajalle alla näkyvään numeroon. Uusien jäsenien ilmoittautumisohjeet löydät <a href="liity.html">"Partioon"</a>  -välilehdestä.</p>
             </div>
-            <img class="main-img" src="img\vincent-riszdorfer-1453674-unsplash.jpg" alt="">
-            <h3>Kevätkauden toimintaa</h3>
-            <div class="calendar">        
-                <article>
-                    <h4>TAMMIKUU</h4>
-                    <ul>
-                        <li>Ryhmien retket</li>
-                        <li>VJ-kurssi, osa-I. (tarpojat)</li>
-                        <li>VJN-kokous 14.1. (johtajat)</li>
-                    </ul>
-                </article>
-                <article>
-                    <h4>HELMIKUU</h4>
-                    <ul>
-                        <li>Talviretki 8.-10.2. (seikkailijat, tarpojat)</li>
-                        <li>Vko 8 HIIHTOLOMA (ei kokouksia)</li>
-                        <li>Lätkäturnaus (koko lippukunta)</li>
-                        <li>Kevätkokous (johtajat)</li>
-                    </ul>
-                </article>
-                <article>
-                    <h4>MAALISKUU</h4>
-                    <ul>
-                        <li>Kettuvartion kämppäretki 1.-3.3.</li>
-                        <li>Sählyturnaus (koko lippukunta)</li>
-                        <li>VJN-eräretki 30.-31.3. (johtajat)</li>
-                    </ul>
-                </article>
-                <article>
-                    <h4>HUHTIKUU</h4>
-                    <ul>
-                        <li>Pohjola V 5.-7.4. (koko lippukunta)</li>
-                        <li>EPO:n pääsiäisvaellus 17.-22.4. (johtajat)</li>
-                        <li>Suunnistuskisat & Komppassi-cup (johtajat)</li>
-                        <li>Piirin kevät-pt:t Ranta-Törmä 27.4. (seikkailijat, tarpojat)</li>
-                    </ul>
-                </article>
-                <article>
-                    <h4>TOULOKUU</h4>
-                    <ul>
-                        <li>Kämppätalkoot 4.5. (johtajat)</li>
-                        <li>Savotta XVII 17.-19.5. (seikkailijat, tarpojat)</li>
-                        <li>Kevätjuhla (koko lippukunta)</li>
-                    </ul>
-                </article>
-                <article>
-                    <h4>KESÄKUU</h4>
-                    <ul>
-                        <li>Melontapäivä (johtajat)</li>
-                        <li>Jukolan viesti Kangasala 15.-16.6. (johtajat)</li>
-                        <li>EPO:n melontavaellus 28.-30.6. (johtajat)</li>
-                    </ul>
-                </article>
-                <article>
-                    <h4>HEINÄKUU</h4>
-                    <ul>
-                        <li>EPO:n Kesävaellus Lappiin 15.-21.7. (johtajat)</li>
-                        <li>LP:n kesäleiri 29.7.-4.8. (koko lippukunta)</li>
-                    </ul>
-                </article>
-                <article>
-                    <h4>ELOKUU</h4>
-                    <ul>
-                        <li>Suuri savu (johtajat)</li>
-                        <li>VJ-kurssin kaupunki-ilta (tarpojat)</li>
-                        <li>TAISTO 23.-25.8. (johtajat)</li>
-                    </ul>
-                </article>
+            <h4>Lippukunnanjohtaja</h4>
+            <p class="basic-text">Atte Österholm:</p>
+            <span>0407795618</span>
+            <div class="times">
+                <h4>Lauttapartio ry</h4>
+                <ul>
+                    <li>lauttapartio@gmail.com</li>
+                    <li>Myllykallionrinne 1 D, 2. kerros</li>
+                    <li>00200 Helsinki</li>
+                    <li></li>
+                    <li></li>
+                </ul>
             </div>
             <div class="times">
-                <h3>Kokousajat</h3>
-                <article>
-                    <h4>1.-luokkalaiset, ikäkausi 2011</h4>
-                    <p>maanantaisin 17:45 - 18:45</p>
-                </article>
-                <article>
-                    <h4>1.-luokkalaiset, ikäkausi 2011</h4>
-                    <p>maanantaisin 17:45 - 18:45</p>
-                </article>
-                <article>
-                    <h4>1.-luokkalaiset, ikäkausi 2011</h4>
-                    <p>maanantaisin 17:45 - 18:45</p>
-                </article>
-                <article>
-                    <h4>1.-luokkalaiset, ikäkausi 2011</h4>
-                    <p>maanantaisin 17:45 - 18:45</p>
-                </article>
-                <article>
-                    <h4>1.-luokkalaiset, ikäkausi 2011</h4>
-                    <p>maanantaisin 17:45 - 18:45</p>
-                </article>
-                <article>
-                    <h4>1.-luokkalaiset, ikäkausi 2011</h4>
-                    <p>maanantaisin 17:45 - 18:45</p>
-                </article>
-                <article>
-                    <h4>1.-luokkalaiset, ikäkausi 2011</h4>
-                    <p>maanantaisin 17:45 - 18:45</p>
-                </article>
+                <h4>PÄÄKAUPUNKISEUDUN PARTIOLAISET</h4>
+                <ul>
+                    <li>Pääkaupunkiseudun partiolaiset ry</li>
+                    <li>(09) 8865 1200</li>
+                    <li>Töölönkatu 55</li>
+                    <li>00250 Helsinki</li>
+                    <li><a href="http://www.paakaupunkiseudunpartiolaiset.fi">http://www.paakaupunkiseudunpartiolaiset.fi</a></li>
+                </ul>
+            </div>
+            <div class="times">
+                <h4>KESKUSJÄRJESTÖ</h4>
+                <ul>
+                    <li>Suomen partiolaiset - Finlands Scouter ry</li>
+                    <li>(09) 8865 1100</li>
+                    <li>Töölönkatu 55</li>
+                    <li>00250 Helsinki</li>
+                    <li><a href="https://www.partio.fi">www.partio.fi</a></li>
+                </ul>
             </div>
         </main>
         <footer class="footer">
