--- a/index.html
+++ b/index.html
@@ -108,28 +108,28 @@
                     <p>maanantaisin 17:45 - 18:45</p>
                 </article>
                 <article>
-                    <h4>1.-luokkalaiset, ikäkausi 2011</h4>
-                    <p>maanantaisin 17:45 - 18:45</p>
+                    <h4>2.-luokkalaiset, ikäkausi 2010</h4>
+                    <p>maanantaisin 18:15 - 19:15</p>
                 </article>
                 <article>
-                    <h4>1.-luokkalaiset, ikäkausi 2011</h4>
-                    <p>maanantaisin 17:45 - 18:45</p>
+                    <h4>3.-luokkalaiset, ikäkausi 2009</h4>
+                    <p>torstaisin 18:00 - 19:00</p>
                 </article>
                 <article>
-                    <h4>1.-luokkalaiset, ikäkausi 2011</h4>
-                    <p>maanantaisin 17:45 - 18:45</p>
+                    <h4>4.-luokkalaiset, ikäkausi 2008</h4>
+                    <p>tiistaisin 18:00 - 19:30</p>
                 </article>
                 <article>
-                    <h4>1.-luokkalaiset, ikäkausi 2011</h4>
-                    <p>maanantaisin 17:45 - 18:45</p>
+                    <h4>5.-luokkalaiset, ikäkausi 2007</h4>
+                    <p>tiistaisin 18:00 - 19:30</p>
                 </article>
                 <article>
-                    <h4>1.-luokkalaiset, ikäkausi 2011</h4>
-                    <p>maanantaisin 17:45 - 18:45</p>
+                    <h4>6.-luokkalaiset, ikäkausi 2006</h4>
+                    <p>tiistaisin 18:30 - 20:00</p>
                 </article>
                 <article>
-                    <h4>1.-luokkalaiset, ikäkausi 2011</h4>
-                    <p>maanantaisin 17:45 - 18:45</p>
+                    <h4>7.-luokkalaiset, ikäkausi 2005</h4>
+                    <p>keskiviikkoisin 18:15 - 19:45</p>
                 </article>
             </div>
         </main>
