--- a/yhteystiedot.html
+++ b/yhteystiedot.html
@@ -35,17 +35,15 @@
             <h4>Lippukunnanjohtaja</h4>
             <p class="basic-text">Atte Österholm:</p>
             <span>0407795618</span>
-            <div class="times">
+            <div class="times" class="yhtied">
                 <h4>Lauttapartio ry</h4>
                 <ul>
                     <li>lauttapartio@gmail.com</li>
                     <li>Myllykallionrinne 1 D, 2. kerros</li>
                     <li>00200 Helsinki</li>
-                    <li></li>
-                    <li></li>
                 </ul>
             </div>
-            <div class="times">
+            <div class="times" class="yhtied">
                 <h4>PÄÄKAUPUNKISEUDUN PARTIOLAISET</h4>
                 <ul>
                     <li>Pääkaupunkiseudun partiolaiset ry</li>
@@ -55,7 +53,7 @@
                     <li><a href="http://www.paakaupunkiseudunpartiolaiset.fi">http://www.paakaupunkiseudunpartiolaiset.fi</a></li>
                 </ul>
             </div>
-            <div class="times">
+            <div class="times" class="yhtied">
                 <h4>KESKUSJÄRJESTÖ</h4>
                 <ul>
                     <li>Suomen partiolaiset - Finlands Scouter ry</li>
