--- a/yhteystiedot.html
+++ b/yhteystiedot.html
@@ -34,8 +34,8 @@
             </div>
             <h4>Lippukunnanjohtaja</h4>
             <p class="basic-text">Atte Österholm:</p>
-            <span>0407795618</span>
-            <div class="times" class="yhtied">
+            <span class="basic-text">040 779 56 18</span>
+            <div class="times">
                 <h4>Lauttapartio ry</h4>
                 <ul>
                     <li>lauttapartio@gmail.com</li>
@@ -43,7 +43,7 @@
                     <li>00200 Helsinki</li>
                 </ul>
             </div>
-            <div class="times" class="yhtied">
+            <div class="times">
                 <h4>PÄÄKAUPUNKISEUDUN PARTIOLAISET</h4>
                 <ul>
                     <li>Pääkaupunkiseudun partiolaiset ry</li>
@@ -53,7 +53,7 @@
                     <li><a href="http://www.paakaupunkiseudunpartiolaiset.fi">http://www.paakaupunkiseudunpartiolaiset.fi</a></li>
                 </ul>
             </div>
-            <div class="times" class="yhtied">
+            <div class="times">
                 <h4>KESKUSJÄRJESTÖ</h4>
                 <ul>
                     <li>Suomen partiolaiset - Finlands Scouter ry</li>
