--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-    <link rel="stylesheet" href="mobile.css">
+    <link rel="stylesheet" media="screen and (max-width: 650px)" href="mobile.css">
+    <link rel="stylesheet" media="screen and (min-width: 651px)" href="style.css"/>
     <title>LP Etusivu</title>
 </head>
 <body>
@@ -28,7 +29,7 @@
             <a href="liity.html">liity</a>
         </button>
         <main class="main-text">
-            <div>
+            <div class="textblock">
                 <h2>Otsikko</h2>
                 <p class="basic-text">Olemme Helsingin Lauttasaaressa toimiva erähenkinen poikapartiolippukunta. Lippukuntaan kuuluu yli sata jäsentä, pääosa 7-25-vuotiaita. Tule mukaan toimintaan! Aloita maailman paras harrastus jossa opituista taidoista on varmasti hyötyä tulevaisuudessakin!</p>
             </div>
