--- a/liity.html
+++ b/liity.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-    <link rel="stylesheet" href="mobile.css">
+    <link rel="stylesheet" media="screen and (max-width: 650px)" href="mobile.css">
+    <link rel="stylesheet" media="screen and (min-width: 651px)" href="style.css"/>
     <title>LP Etusivu</title>
 </head>
 <body>
@@ -28,15 +29,17 @@
             <a href="liity.html">liity</a>
         </button>
         <main class="main-text">
-            <div>
+            <div class="textblock">
                 <h2>Tule mukaan Lauttapartioon!</h2>
                 <p class="basic-text">Meillä partiossa opetellaan paljon erilaisia tietoja ja taitoja. Oppimispaikkoja ovat viikoittaiset kokoukset, retket ja leirit sekä kilpailut ja koitokset, joissa taitojaan pääsee kokeilemaan. Mikään koulu partio ei ole, vaan partiota kuvaa hyvin lausahdus "hauskanpitoa jolla on tarkoitus". Kaikkien ei ole tarkoitus oppia kaikkea, vaan jokainen kulkee oman ja kulloisenkin ryhmänsä nälöisen partiopolun.
                 </p>
             </div>
             <img class="main-img" src="img/Kopio_ Kopio_ Nimetön suunn.malli (1).png" alt="">
-            <p class="basic-text">Ryhmät aloittavat syyskuun alussa ja joka syksy perustetaan uusi 7-vuotiaiden ryhmä. Myös vanhemmat partioon halukkaat ovat tervetulleita mukaan. Tietoa kokoontumisajoista saat sivulta Ryhmät. <br>
-            Ilmoittautua voit sähköpostitse lähettämällä seuraavat tiedot osoitteeseen lauttapartio(a)gmail.com tai lähettämällä tekstiviesti suoraan lippukunnanjohtaja Atte Österholmille 040 779 5618.</p>
-            <h3>???</h3>
+            <div class="join-info">
+                <h3>Näin ilmottaudut</h3>
+                <p class="basic-text">Ryhmät aloittavat syyskuun alussa ja joka syksy perustetaan uusi 7-vuotiaiden ryhmä. Myös vanhemmat partioon halukkaat ovat tervetulleita mukaan. Tietoa kokoontumisajoista saat sivulta Ryhmät. <br>
+                Ilmoittautua voit sähköpostitse lähettämällä seuraavat tiedot osoitteeseen lauttapartio(a)gmail.com <br> tai lähettämällä tekstiviesti suoraan lippukunnanjohtaja Atte Österholmille <br> 040 779 5618.</p>
+            </div>
             <div class="calendar">        
                 <article>
                     <h4>Uuden jäsenen tiedot:</h4>
