--- a/toiminta.html
+++ b/toiminta.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-    <link rel="stylesheet" href="mobile.css">
+    <link rel="stylesheet" media="screen and (max-width: 650px)" href="mobile.css">
+    <link rel="stylesheet" media="screen and (min-width: 651px)" href="style.css"/>
     <title>LP Etusivu</title>
 </head>
 <body>
@@ -28,12 +29,12 @@
             <a href="liity.html">liity</a>
         </button>
         <main class="main-text">
-            <div>
+            <div class="textblock">
                 <h2>Ryhmien toiminta ikäkausittain</h2>
                 <p class="basic-text">Partiossa ryhmät on jaettu viiteen eri ikäkauteen. 15-vuotiaina Samoajina lauttapartiolaiset pääsevät mukaan laadukkaaseen johtajakoulutusohjelmaan, jonka aikana heistä kasvaa nuorempien ryhmien vetäjiä.</p>
             </div>
             <img class="main-img" src="img/ikäkaudet.png" alt="">
-            <div>
+            <div class="textblock2">
                 <img class="main-img" src="img/lp-kuva1.png" alt="">
                 <h3>Kolkkapojat 7-9 v.</h3>
                 <p class="basic-text">Kolkkien ryhmää kutsutaan laumaksi. Laumaa johtaa vähintään yksi täysi-ikäinen laumanjohtaja ja yksi apujohtaja. Leikit, seikkailut ja tarinat ovat kolkkatoiminnassa tärkeitä. Viikoittaisissa partiokokouksissa kolkkapojat pääsevät ottamaan tuntumaa monenlaiseen partioon kuuluvaan tekemiseen. Ensimmäiset kokemukset retkeilystä ja leirielämästä myös yleensä saadaan kolkkavuosina.</p>
@@ -51,7 +52,7 @@
                 <h3>Vaeltajat 18+ v.</h3>
                 <p class="basic-text">Vaeltajat toimivat kaikkien ryhmien johtajina, lippukunnan leirien ja retkien johtajina ja ottavat vastuutehtäviä, aina lippukunnanjohtajuutta myöten.<br><br>Vaeltajat voivat suorittaa Partiojohtajan Peruskurssin ja osallistua piirin tai kattojärjestön koulutuksiin ja esim. ulkomaanmatkoille. Partiokurssit ovat vaeltajille ilmaisia.</p>
             </div>
-            <p class="basic-text">Mitä muuta partiossa tehdään? Lue lisää ikäkausien toiminnasta osoitteessa partio.fi/ikakaudet!</p>
+            <p class="basic-text" class="textblock2">Mitä muuta partiossa tehdään? Lue lisää ikäkausien toiminnasta osoitteessa partio.fi/ikakaudet!</p>
         </main>
         <footer class="footer">
             <div class="social">
